tests/fixtures/compile_errors/binary_operations/add_uints.fe
contract Foo:
    pub def foo(a: u256, b: u8):
        a + b